# mympi

./: CMakeLists.txt  README.md  main.sh
.github/workflows/: main.yml
include/: mympi.h  mympi.hpp  print.hpp
src/: mympi.c  mympi.cpp
tests/: ctest.sh  main.c
